2004-08-10  James Tanis  <jtt@outpost.tanis.org>

	* lib/b_relay.c (bk_relay_iohhandler): Null out "my" ioh after
	close to prevent resuse. Alter parameter declaration from array to
	pointer to shut up Insure.

	* lib/b_netinfo.c (bk_netinfo_from_socket): Once again, do *not*
	use a struct sockaddr casted to struct sockaddr_FOO. It has only
	14 bytes of sa_data, and sockaddr_FOO may have much more.

	* lib/b_addrgroup.c (as_destroy): Null out bag after destruction
	to prevent reuse.

2004-08-09  James Tanis  <jtt@outpost.tanis.org>

	* lib/b_addrgroup.c (listen_activity): Get DGRAM server handling
	multiple connections.

2004-08-03  James Tanis  <jtt@outpost.tanis.org>

	* lib/b_netaddr.c (bk_netaddr_clone): Missed break in previously
	unused case.

2004-08-04  Seth Robertson  <seth@cheviot.sysdetect.com>

	* lib/b_ioh.c (bk_ioh_is_canceled): It is not fully clear whether
	bk_ioh_is_canceled should return only is_canceled or both
	is_canceled and is_closed.  There is no corresponding
	ioh_is_closed function.  The only use of it to date suggests that
	both is good.

2004-07-14  Seth Robertson  <seth@cheviot.sysdetect.com>

	* lib/b_ioh.c (check_follow): Don't follow if we are canceled.

2004-07-12  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_strconv.c (bk_string_atou64_int): Allow caller to force base.

2004-07-09  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_ringbuf.c: Convert over to BK_SIMPLE_{UN,}LOCK() for
	readability.

2004-07-08  James Tanis  <jtt@buscemi.sysdetect.com>

	* lib/b_netutils.c (bk_netutils_make_conn_verbose): If local
	protocol string is not set, use the remote protostr.

2004-07-03  Seth Robertson  <seth@cheviot.sysdetect.com>

	* lib/b_run.c (bk_run_enqueue): Do not enqueue events if we are
	attempting to destroy run.  This is a sign of a self-scheduling
	job gone awry, typically.

2004-06-29  Seth Robertson  <seth@cheviot.sysdetect.com>

	* src/timeout.c (main): Option to wait for process to exit after
	signaling.
