@@ -1,6 +1,6 @@
 #if !defined(lint) && !defined(__INSIGHT__)
 #include "libbk_compiler.h"
-UNUSED static const char libbk__rcsid[] = "$Id: bdtee.c,v 1.5 2004/07/08 04:40:18 lindauer Exp $";
+UNUSED static const char libbk__rcsid[] = "$Id: bdtee.c,v 1.6 2004/08/11 00:41:42 jtt Exp $";
 UNUSED static const char libbk__copyright[] = "Copyright (c) 2003";
 UNUSED static const char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -325,7 +325,7 @@ static int proginit(bk_s B, struct program_config *pc)
     bk_error_printf(B, BK_ERR_ERR, "Could not create ioh1 for second prog\n");
   }
 
-  if (bk_relay_ioh(B, ioh1, ioh2, relay_tee, pc, NULL, 0) < 0)
+  if (bk_relay_ioh(B, ioh1, ioh2, relay_tee, pc, NULL, NULL, 0) < 0)
   {
     bk_error_printf(B, BK_ERR_ERR, "Could not create relay\n");
     goto error;
