@@ -1,5 +1,16 @@
 2004-08-10  James Tanis  <jtt@outpost.tanis.org>
 
+	* src/bttcp.c (set_run_over): Set the run over flag if it has not
+	already been set.
+	(do_cancel_relay): Function to cancel relay on ^C (needed for
+	udp). 
+
+	* lib/b_relay.c (bk_relay_cancel): Function for allowing users to
+	cancel the relay in medias res.
+
+	* lib/b_addrgroup.c (listen_activity): Don't extract bag from as
+	until after you've checked for closing.
+
 	* lib/b_relay.c (bk_relay_iohhandler): Null out "my" ioh after
 	close to prevent resuse. Alter parameter declaration from array to
 	pointer to shut up Insure.
